Fixed agreement label alignment

--- a/app/assets/stylesheets/bootstrap-and-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-and-overrides.css.scss
@@ -122,7 +122,7 @@ div.products {
 	&:hover {
 	    background-color: rgba(255,255,255,1);
 	}
-	h4 { margin-right: -100px; }
+	h5 { margin-right: -100px; }
     }
 }
 
